--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "tsc --project tsconfig.json",
     "typecheck": " tsc --project tsconfig.json --noEmit",
     "dev": "NODE_ENV=DEVELOPMENT node -r dotenv/config .",
-    "start": "NODE_ENV=PRODUCTION node ."
+    "start": "NODE_ENV=PRODUCTION node -r dotenv/config ."
   },
   "license": "MIT",
   "author": "Luxanna Crownguard (ySnoopyDogy)",
@@ -14,7 +14,6 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
-    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
@@ -25,6 +24,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
   }
 }
